tests/src/frontend/syntax/invalid/duplicate_modifiers_definition.sk
base base class C() {}

fun main(): String {
  "Fail"
}
